tests/baselines/reference/parserStrictMode3.errors.txt
==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode3.ts (2 errors) ====
    "use strict";
    eval = 1;
    ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
    ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.